# godot-mujoco

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
docs/: full_plan.md
example/: GodotMujocoExample.csproj  Main.tscn  PhysicsBenchmark.tscn  project.godot
example/models/: pendulum.xml
example/policy_exports/: policy_linear.sample.json  vecnorm_stats.sample.json
example/scripts/: MjCreatureManager.cs  MjCreatureManager.cs.uid  MjCreatureRuntime.cs  MjCreatureRuntime.cs.uid  MjCreatureTrainerBridge.cs  MjCreatureTrainerBridge.cs.uid  MjPolicyHotReloader.cs  MjPolicyHotReloader.cs.uid  MjSceneRuntime.cs  MjSceneRuntime.cs.uid  MujocoNative.cs  MujocoNative.cs.uid  OnnxPolicy.cs  OnnxPolicy.cs.uid  PhysicsBenchmark.cs  VecNormalizeStats.cs  VecNormalizeStats.cs.uid
godot_demo/: Main.tscn  project.godot
godot_demo/models/: pendulum.xml
godot_demo/scripts/: MjSceneRuntime.cs  MujocoDemo.cs  MujocoNative.cs
include/godot_mujoco/: gmj_bridge.h
scripts/: check_runtime_bundle.py
src/: gmj_bridge.c
